# Mindlair

./: .dockerignore  .eslintrc.json  .gitignore  .railway-force-rebuild  AI_FALLBACK_SETUP.md  API_SETUP_GUIDE.md  CONTRIBUTING.md  DEBUG_EMAIL_AND_CUES.md  DEBUG_GEMINI.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  DIRECTORS_INSIGHTS_GUIDE.md  Dockerfile  ENVIRONMENT_VARIABLES.md  ENV_SETUP.md  LEVEL-1-AND-2-ARCHITECTURE.md  LICENSE  LOFI-MUSIC-SOURCES.md  MANUAL-FIX-INSTRUCTIONS.md  MIND_STATE_SYSTEM.md  ML-MODEL-ARCHITECTURE.md  NEW-DATABASE-SETUP.md  NOTIFICATIONS_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  POPULATE_DATABASE.md  PRODUCTION_DEPLOYMENT.md  PUSH-NOTIFICATION-DIAGNOSTIC.md  PUSH_NOTIFICATIONS_SETUP.md  PUSH_NOTIFICATION_TEST_GUIDE.md  PWA-ICON-UPDATE-INSTRUCTIONS.md  PWA_CHECKLIST.md  PWA_QUICK_START.md  PWA_SETUP.md  PWA_TESTING_CHECKLIST.md  QUICKSTART.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_ENV_VARIABLES.md  README.md  REFLECTION_PRIVACY_POLICY.md  REGENERATE-PWA-ICONS.md  (+47 more)
docs/: cue-companion-spec.md
mindlair/: .gitignore  README.md  package-lock.json  package.json
mindlayer/: .gitignore  README.md  package-lock.json  package.json
mindlayer/apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
mindlayer/apps/desktop/src-tauri/src/: lib.rs  main.rs
mindlayer/apps/desktop/src-tauri/src/capture/: audio.rs  mod.rs  safari_history.rs  screen.rs  url.rs
mindlayer/apps/desktop/src-tauri/src/storage/: mod.rs
mindlayer/apps/desktop/src-tauri/src/sync/: mod.rs
prisma/: schema.prisma
scripts/: build-extensions.js  generate-pwa-icons.js  (+1 more)
(+744 files in other folders)
