[package]
name = "mindlayer-desktop"
version = "0.1.0"
description = "Mindlayer - Map how you think"
authors = ["Mindlayer"]
edition = "2021"

[lib]
name = "mindlayer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
security-framework = "2"

# Windows specific  
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_WinRT_Graphics_Capture"
] }
winreg = "0.52"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
